@@ -3,9 +3,9 @@ package io.kestra.plugin.aws.s3;
 import java.io.File;
 import java.io.IOException;
 import java.net.URI;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -25,8 +25,8 @@ import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.ChecksumMode;
 import software.amazon.awssdk.services.s3.model.GetObjectRequest;
 import software.amazon.awssdk.services.s3.model.GetObjectResponse;
-import software.amazon.awssdk.services.s3.model.ListObjectsRequest;
-import software.amazon.awssdk.services.s3.model.ListObjectsResponse;
+import software.amazon.awssdk.services.s3.model.ListObjectsV2Request;
+import software.amazon.awssdk.services.s3.model.ListObjectsV2Response;
 import software.amazon.awssdk.transfer.s3.S3TransferManager;
 import software.amazon.awssdk.transfer.s3.model.DownloadFileRequest;
 import software.amazon.awssdk.transfer.s3.model.FileDownload;
@@ -158,9 +158,12 @@ public class S3Service {
     }
 
     public static List<S3Object> list(RunContext runContext, S3Client client, ListInterface list, AbstractS3Object abstractS3) throws IllegalVariableEvaluationException {
-        ListObjectsRequest.Builder builder = ListObjectsRequest.builder()
+        int rMaxKeys = runContext.render(list.getMaxKeys()).as(Integer.class).orElse(1000);
+
+        ListObjectsV2Request.Builder builder = ListObjectsV2Request.builder()
             .bucket(runContext.render(list.getBucket()).as(String.class).orElseThrow())
-            .maxKeys(runContext.render(list.getMaxKeys()).as(Integer.class).orElse(1000));
+            // per-page size is capped at 1000 by S3, rMaxKeys is the total cap across pages
+            .maxKeys(Math.min(rMaxKeys, 1000));
 
         if (list.getPrefix() != null) {
             builder.prefix(runContext.render(list.getPrefix()).as(String.class).orElseThrow());
@@ -170,8 +173,9 @@ public class S3Service {
             builder.delimiter(runContext.render(list.getDelimiter()).as(String.class).orElseThrow());
         }
 
+        // V2 uses startAfter instead of marker (same "list after this key" semantics).
         if (list.getMarker() != null) {
-            builder.marker(runContext.render(list.getMarker()).as(String.class).orElseThrow());
+            builder.startAfter(runContext.render(list.getMarker()).as(String.class).orElseThrow());
         }
 
         if (list.getEncodingType() != null) {
@@ -187,15 +191,39 @@ public class S3Service {
         }
 
         String regExp = runContext.render(list.getRegexp()).as(String.class).orElse(null);
+        var filter = runContext.render(list.getFilter()).as(ListInterface.Filter.class).orElseThrow();
 
-        ListObjectsResponse listObjectsResponse = client.listObjects(builder.build());
+        ListObjectsV2Request baseRequest = builder.build();
+        List<software.amazon.awssdk.services.s3.model.S3Object> allContents = new ArrayList<>();
 
-        return listObjectsResponse
-            .contents()
-            .stream()
-            .filter(throwPredicate(s3Object -> S3Service.filter(s3Object, regExp, runContext.render(list.getFilter()).as(ListInterface.Filter.class).orElseThrow())))
+        ListObjectsV2Request currentRequest = baseRequest;
+        ListObjectsV2Response response;
+        do {
+            response = client.listObjectsV2(currentRequest);
+            allContents.addAll(response.contents());
+
+            // maxKeys is a total cap across pages, the per-page size is capped at 1000 by S3.
+            if (allContents.size() >= rMaxKeys) {
+                break;
+            }
+
+            if (response.isTruncated()) {
+                String nextToken = response.nextContinuationToken();
+                if (nextToken == null) {
+                    // Guard: isTruncated=true but no token returned, stop to avoid an infinite loop.
+                    runContext.logger().warn("S3 list pagination stopped: isTruncated=true but no continuation token available.");
+                    break;
+                }
+                currentRequest = baseRequest.toBuilder().continuationToken(nextToken).build();
+            }
+        } while (response.isTruncated());
+
+        var contents = allContents.size() > rMaxKeys ? allContents.subList(0, rMaxKeys) : allContents;
+
+        return contents.stream()
+            .filter(throwPredicate(s3Object -> S3Service.filter(s3Object, regExp, filter)))
             .map(S3Object::of)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private static boolean filter(software.amazon.awssdk.services.s3.model.S3Object object, String regExp, ListInterface.Filter filter) {
